# docker-sample-app

./: Dockerfile  README.md  pyproject.toml
src/docker_sample_app/: __init__.py  app.py
