[project]
name = "docker-sample-app"
version = "0.1.0"
description = "qiitaの記事用のサンプルアプリケーションです。"
authors = [
    { name = "Haruki Ise", email = "hise@umn.co.jp" }
]
dependencies = [
    "flask>=3.0.3",
    "redis>=5.0.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/docker_sample_app"]
